# PDASC

./: README.md  ascii_converter.py  ascii_displayer.py  ascii_file_encoding.py  audio_player.py  cli.py  generate_color_ramp.py  main.py  out.txt  pyproject.toml  requirements.txt  sizes.txt  utils.py  video_extracter.py
core/: __init__.py  ascii_converter.py  ascii_displayer.py  ascii_file_encoding.py  audio_player.py  generate_color_ramp.py  video_ascii_video.py
pdasc/: main.py
shaders/: ascii.frag
web/: __init__.py
web/image_controller/: app.py
web/image_controller/templates/: index.html
web/templates/: index.html
web/video_player/: app.py
web/video_player/templates/: index.html
